--- a/App/config.json
+++ b/App/config.json
@@ -4,7 +4,7 @@
     "capacity_delta": 5,
     "packet_size": 1400,
     "packets_per_hop": 300,
-    "icmp_ratemask": 0,
+    "icmp_ratelimit": 0,
     "packet_loss": 0,
     "cross_traffic": 1.0,
     "output": "results/results.csv"
